<resources>
    <string name="app_name">ISIDA-9</string>

    <string name="home_tab_stats">Stats</string>
    <string name="home_tab_prop">Properties</string>
    <string name="home_tab_report">Report</string>

    <string name="CellNum">КАМЕРА № %1$s</string>
    <string name="btnStart">Старт</string>
    <string name="btnProp">Уст.</string>
    <string name="btnInfo">Инфо</string>
    <string name="btnReport">Отчет</string>
    <string name="num1">1</string>
    <string name="pv_t0_label">Сухой</string>
    <string name="pv_t1_label">Влажный</string>
    <string name="pv_rh_label">Влажность</string>
    <string name="pv_t2_label">Контроль</string>
    <string name="pv_t3_label">Скорлупа</string>
    <string name="timer">Таймер</string>
    <string name="cotwo">CO2</string>
    <string name="counter">Повороты</string>
    <string name="flap">Заслонка</string>
    <string name="power">Нагрев</string>
    <string name="fuses">Авария</string>
    <string name="errors">Ошибки</string>
    <string name="warnings">Внимание</string>
    <string name="state">Камера</string>
    <string name="extendMode">Режим IV</string>
    <string name="programm">Программа</string>
    <string name="incubation">Всего час.</string>
    <string name="energyMeter">Расход Эл.</string>

    <string name="load">Загружен</string>
    <string name="datetime">05.12.21</string>
    <string name="time">05ч.12мин.</string>
    <string name="prognum">НЕТ</string>
    <!--    <string name="fraction">**.*</string>-->
    <!--    <string name="fractionU">[**.*]</string>-->
    <!--    <string name="integer">***</string>-->
    <!--    <string name="integerU">[***]</string>-->
    <!--    <string name="percent">***%</string>-->
    <!--    <string name="percentU">[**%]</string>-->
    <!--    <string name="cotwoVal">****</string>-->
    <string name="enter">Введите команду</string>
    <string name="myText">просто текст</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_listener" translatable="false">ListenerActivity</string>
    <string name="title_activity_auto_connect" translatable="false">AutoConnectActivity</string>
    <string name="title_activity_device_list" translatable="false">DeviceListActivity</string>
    <string name="title_activity_terminal" translatable="false">TerminalActivity</string>

    <string name="label_connect">Connect</string>
    <string name="label_send">Send</string>
    <string name="label_scan">SCAN</string>
    <string name="status_not_connect">Status : Not connect.</string>
    <string name="status_connection_failed">Status : Connection failed</string>
    <string name="status_connected_to">Status : Connected to %1$s</string>
    <string name="connect_with_android_device">Connect with android device</string>
    <string name="bluetooth_terminal">Bluetooth Terminal</string>
    <string name="connect_with_ISIDA">Connect with ISIDA</string>
    <string name="disconnect">Disconnect</string>
    <string name="bluetooth_is_not_available">Bluetooth is not available</string>
    <string name="connected_to">Connected to</string>
    <string name="connection_lost">Connection lost</string>
    <string name="bluetooth_was_not_enabled">Bluetooth was not enabled.</string>

    <string name="txtChip1">Мониторинг тихоход. вентилятора</string>
    <string name="txtChip2">Мониторинг поворота лотков</string>
    <string name="txtChip3">Горизонтальное положение лотков</string>
    <string name="txtChip4">Режим подгототка к ОХЛАЖДЕНИЮ</string>
    <string name="radioButOFF">ОТКЛЮЧИТЬ камеру</string>
    <string name="radioButON">ВКЛЮЧИТЬ камеру</string>
    <string name="radioButTURN">только ПОВОРОТ</string>
    <string name="save_data">ЗАПИСАТЬ</string>
    <string name="prop_U1">U1</string>
    <string name="no">НЕТ</string>

    <string name="chickens">Цеплята</string>
    <string name="ducklings">Утята</string>
    <string name="goose">Гусята</string>
    <string name="quail">Перепел</string>

    <string name="prop_dimen_celsius" translatable="false">%1$s °C</string>
    <string name="prop_dimen_percent" translatable="false">%1$s %%</string>
    <string name="prop_dimen_ppm" translatable="false">%1$s ppm.</string>
    <string name="prop_dimen_sec">%1$s sec.</string>
    <string name="prop_dimen_min">%1$s min.</string>
    <string name="prop_dimen_kwt">%1$s kWt/h.</string>

    <string name="prop_dry_sensor_label">Dry sensor</string>
    <string name="prop_wet_sensor_label">Wet sensor</string>
    <string name="prop_rh_ofset_label">Ofset RH sensor</string>
    <string name="prop_rh_sensor_label">RH sensor</string>
    <string name="prop_p_coef_dry_label">Coeff. P dry sensor</string>
    <string name="prop_p_coef_wet_label">Coeff. P wet sensor</string>
    <string name="prop_i_coef_dry_label">Coeff. I dry sensor</string>
    <string name="prop_i_coef_wet_label">Coeff. I wet sensor</string>
    <string name="prop_min_impulse_label">Minimum impulse</string>
    <string name="prop_max_impulse_label">Maximum impulse</string>
    <string name="prop_repeat_time_label">Repeat time</string>
    <string name="prop_waiting_time_label">Waiting time</string>
    <string name="prop_Wattmeter_label">Wattmeter</string>
    <string name="prop_turned_off_label">Turned off</string>
    <string name="prop_turned_on_label">Turned on</string>
    <string name="prop_bias_alarm_dry_label">Bias alarm dry sensor</string>
    <string name="prop_bias_alarm_wet_label">Bias alarm wet sensor</string>
    <string name="prop_bias_extOn_dry_label">Bias extOn dry sensor</string>
    <string name="prop_bias_extOn_wet_label">Bias extOn wet sensor</string>
    <string name="prop_bias_extOff_dry_label">Bias extOff dry sensor</string>
    <string name="prop_bias_extOff_wet_label">Bias extOff wet sensor</string>
    <string name="prop_pause_airing_label">Pause airing</string>
    <string name="prop_airing_work_label">Airing work</string>
    <string name="prop_CO2_concentration_label">CO2 concentration</string>
    <string name="prop_id_label">Device number</string>
    <string name="prop_camera_status_label">Camera status</string>
    <string name="prop_extended_mode_label">Extended mode</string>
    <string name="prop_working_mode_label">Working mode</string>
    <string name="prop_program_number_label">Program number</string>
    <string name="prop_Hysteresis_label">Humidification channel hysteresis</string>
    <string name="prop_forced_heating_label">Forced heating</string>
    <string name="prop_tray_passage_time_label">Tray passage time</string>
    <string name="prop_RH_sensor_allowed_label">RH sensor allowed</string>
    <string name="prop_scale_factor_label">Scale factor</string>
    <string name="prop_not_used0_label">not used</string>
    <string name="prop_not_used1_label">not used</string>
    <string name="prop_zone_threshold_label">Zone threshold</string>

    <string name="input_info_limit">Defined limits</string>
    <string name="input_info_limit_min_max">Value should be in range from %1$s to %2$s</string>
    <string name="input_info_limit_max">Value should be less then %1$s</string>
    <string name="input_info_limit_min">Value should be bigger then %1$s</string>
</resources>