<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="vertical">

    <TextView android:id="@+id/tv_cell"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_marginStart="10sp"
              android:text="@string/CellNum"
              android:textSize="34sp"
              android:textStyle="bold" />

    <com.google.android.material.chip.Chip
        android:id="@+id/chip_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10sp"
        android:checkable="true"
        android:text="@string/txtChip1"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold" />

    <com.google.android.material.chip.Chip
        android:id="@+id/chip_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10sp"
        android:checkable="true"
        android:text="@string/txtChip2"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold" />

    <com.google.android.material.chip.Chip
        android:id="@+id/chip_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10sp"
        android:checkable="true"
        android:text="@string/txtChip3"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold" />

    <com.google.android.material.chip.Chip
        android:id="@+id/chip_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10sp"
        android:checkable="true"
        android:text="@string/txtChip4"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold" />

    <RadioGroup android:id="@+id/rg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp">

        <RadioButton android:id="@+id/radioButOFF"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="20sp"
                     android:text="@string/radioButOFF"
                     android:textColor="@color/radioButOFF"
                     android:textSize="24sp"
                     android:textStyle="bold" />

        <RadioButton android:id="@+id/radioButON"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="20sp"
                     android:text="@string/radioButON"
                     android:textColor="@color/radioButON"
                     android:textSize="24sp"
                     android:textStyle="bold" />

        <RadioButton android:id="@+id/radioButTURN"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="20sp"
                     android:text="@string/radioButTURN"
                     android:textSize="24sp"
                     android:textStyle="bold" />
    </RadioGroup>

    <Button android:id="@+id/btnSaveStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/save_data"
            android:textAppearance="?attr/textAppearanceHeadline5" />
</LinearLayout>