<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              tools:ignore="LabelFor">

    <TextView
        android:id="@+id/tvCellProp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/CellNum"
        android:textSize="34sp"
        android:textStyle="bold" />

    <TableLayout
        android:id="@+id/tblProp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tvU1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="@string/prop_U1"
                android:textColor="@color/black"
                android:textSize="34sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/etU1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_weight="1"
                android:autofillHints="name"
                android:ems="10"
                android:inputType="numberSigned"
                android:textColor="@color/black"
                android:textSize="34sp"
                android:textStyle="bold" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tvU2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="@string/prop_U1"
                android:textColor="@color/black"
                android:textSize="34sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/etU2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_weight="1"
                android:autofillHints="name"
                android:ems="10"
                android:inputType="numberSigned"
                android:textColor="@color/black"
                android:textSize="34sp"
                android:textStyle="bold" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tvU3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="@string/prop_U1"
                android:textColor="@color/black"
                android:textSize="34sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/etU3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_weight="1"
                android:autofillHints="name"
                android:ems="10"
                android:inputType="numberSigned"
                android:textColor="@color/black"
                android:textSize="34sp"
                android:textStyle="bold" />
        </TableRow>

    </TableLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom"
        android:orientation="vertical">

        <Button
            android:id="@+id/btnSaveProp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="20dp"
            android:backgroundTint="@color/btn_save_data"
            android:text="@string/save_data"
            android:textSize="30sp" />
    </LinearLayout>


</LinearLayout>
